content changes for robotics and solar journeys

--- a/app/views/robotics/current/energy-source.html
+++ b/app/views/robotics/current/energy-source.html
@@ -30,7 +30,7 @@
           What type of energy will you use?
         </h1>
       </legend>
-      <p class="govuk-hint">Equipment powered by fossil fuels will only be funded where there is no commercially available electric or renewable energy alternative
+      <p class="govuk-hint">Technology powered by fossil fuels will only be funded where there is no commercially available electric or renewable energy alternative
       </p>
       <div id="energy-source-hint" class="govuk-hint">Select up to 2 options</div>
       <div class="govuk-checkboxes">
