--- a/app/views/robotics/current/fossil-fuel-eligibility.html
+++ b/app/views/robotics/current/fossil-fuel-eligibility.html
@@ -27,10 +27,10 @@ Your fossil fuel equipment might be eligible
     <fieldset class="govuk-fieldset" aria-describedby="associated-works-hint">
       <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
         <h1 class="govuk-fieldset__heading">
-          Your fossil fuel equipment might be eligible
+          Your fossil fuel technology might be eligible
         </h1>
       </legend>
-      <p>I confirm I understand fossil fuel equipment will only be funded where there is no commercially available electric or renewable energy alternative.</p>
+      <p>I confirm I understand fossil fuel technology will only be funded where there is no commercially available electric or renewable energy alternative.</p>
       
       
               
