--- a/app/views/robotics/current/solar-energy.html
+++ b/app/views/robotics/current/solar-energy.html
@@ -67,7 +67,7 @@
           <span class="app-step-nav-related__pretitle">Funding priorities</span>
           </h2>
 
-          <p>RPA wants to fund projects that improve the envrionment </p>
+          <p>RPA wants to fund projects that improve the environment. </p>
 
         </div>
 
