--- a/app/views/robotics/current/solar-technology.html
+++ b/app/views/robotics/current/solar-technology.html
@@ -36,7 +36,7 @@
               </h1>
             </legend>
             <div id="waste-hint" class="govuk-hint">
-              Select all that apply.
+              Select all that apply
             </div>
             <div class="govuk-checkboxes" data-module="govuk-checkboxes">
               <div class="govuk-checkboxes__item">
@@ -82,13 +82,7 @@
 
     <div class="govuk-grid-column-one-third">
 
-      <div class="app-step-nav-related app-step-nav-related--singular">
-        <h2 class="app-step-nav-related__heading">
-          <span class="app-step-nav-related__pretitle">Funding priorities</span>
-          </h2>
-          <p>RPA wants to fund solar PV systems that include batteries.</p>
-                      
-      </div>
+      
 
     </div>
 
