--- a/app/views/robotics/current/technology-criteria-fail.html
+++ b/app/views/robotics/current/technology-criteria-fail.html
@@ -24,7 +24,7 @@
     <div class="govuk-grid-column-two-thirds">
       <form id="mainForm" class="form" action="robotic-items" method="post">
       <h1 class="govuk-heading-l">
-        You cannot apply for this scheme
+        You cannot apply for a grant from this scheme 
       </h1>
 
       <p class="govuk-body">Automatic items must meet at least 2 criteria to be eligible for grant funding.</p>
@@ -34,7 +34,7 @@
        <button class="govuk-button" data-module="govuk-button">Add another item</button>
 
        <p><a href="https://www.gov.uk/topic/farming-food-grants-payments/rural-grants-payments"  class="govuk-!-font-size-19">
-          See other grants you may be eligible for.
+          See other grants you may be eligible for
         </a></p>
 
 
