--- a/app/views/slurrystorage/current/existing-size-storage.html
+++ b/app/views/slurrystorage/current/existing-size-storage.html
@@ -105,13 +105,13 @@ Existing size storage
           <span class="app-step-nav-related__pretitle">Eligibility</span>
           </h2>
           {% if (data['farmertype'] == "Pig") %}
-          <p class="govuk-body">This grant is to get your serviceable storage levels to 8 months.<br><br>
-            For example, if you have 4 months’ serviceable storage, we will fund another 4 months. If you have 2 months’ serviceable storage and increase to 12 months, we will fund 6 months.<br><br>
+          <p class="govuk-body">This grant is to get your storage levels to 8 months.<br><br>
+            For example, if you have 4 months’ storage, we will fund another 4 months. If you have 2 months’ storage and increase to 12 months, we will fund 6 months.<br><br>
             You cannot apply for the grant if you already have 8 months' storage that is fit for purpose.<br>
             {%else %}
 
-          <p class="govuk-body">This grant is to get your serviceable storage levels to 6 months.<br><br>
-            For example, if you have 4 months’ serviceable storage, we will fund another 2 months. If you have 2 months’ serviceable storage and increase to 12 months, we will fund 4 months.<br><br>
+          <p class="govuk-body">This grant is to get your storage levels to 6 months.<br><br>
+            For example, if you have 4 months’ storage, we will fund another 2 months. If you have 2 months’ storage and increase to 12 months, we will fund 4 months.<br><br>
             You cannot apply for the grant if you already have 6 months' storage that is fit for purpose.<br>
 
             {% endif %}
