--- a/app/views/slurrystorage/current/farmer-type.html
+++ b/app/views/slurrystorage/current/farmer-type.html
@@ -77,7 +77,7 @@ Farmer type
           <span class="app-step-nav-related__pretitle">Eligibility</span>
           </h2>
           <p class="govuk-body">If your main livestock enterprise is pig, the grant is to get your slurry storage levels to 8 months.<br><br>
-          If beef or dairy is your main livestock enterprise, the grant is to get your storage levels to 6 months.
+          If beef or dairy is your main livestock enterprise, the grant is to get your slurry storage levels to 6 months.
           </p>
      </div>
    </div>
