--- a/app/views/slurrystorage/current/planned-size-storage.html
+++ b/app/views/slurrystorage/current/planned-size-storage.html
@@ -106,13 +106,13 @@ Planned size storage
           <span class="app-step-nav-related__pretitle">Eligibility</span>
           </h2>
       {% if (data['farmertype'] == "Pig") %}
-          <p class="govuk-body">This grant is to get your serviceable storage levels to 8 months.<br><br>
-            For example, if you have 4 months’ serviceable storage, we will fund another 4 months. If you have 2 months’ serviceable storage and increase to 12 months, we will fund 6 months.<br><br>
+          <p class="govuk-body">This grant is to get your storage levels to 8 months.<br><br>
+            For example, if you have 4 months’ storage, we will fund another 4 months. If you have 2 months’ storage and increase to 12 months, we will fund 6 months.<br><br>
             Any capacity above 8 months is not covered by the grant.<br><br>
             You must maintain at least 8 months’ capacity for the duration of the 5-year grant funding agreement.</p>
       {% else %}
-          <p class="govuk-body">This grant is to get your serviceable storage levels to 6 months.<br><br>
-            For example, if you have 4 months’ serviceable storage, we will fund another 2 months. If you have 2 months’ serviceable storage and increase to 12 months, we will fund 4 months.<br><br>
+          <p class="govuk-body">This grant is to get your storage levels to 6 months.<br><br>
+            For example, if you have 4 months’ storage, we will fund another 2 months. If you have 2 months’ storage and increase to 12 months, we will fund 4 months.<br><br>
             Any capacity above 6 months is not covered by the grant.<br><br>
             You must maintain at least 6 months’ capacity for the duration of the 5-year grant funding agreement.</p>
         {% endif %}
