--- a/app/views/slurrystorage/current/separator-options.html
+++ b/app/views/slurrystorage/current/separator-options.html
@@ -40,7 +40,7 @@ Separator options
                   items: [
                 {
                   value: "Screen press 3",
-                  html: "Screen press",
+                  html: "Roller screen press",
                   hint: {
                   text: "(Grant amount: £21,234 per unit)"
                 },
