--- a/app/views/slurrystorage/current/separator.html
+++ b/app/views/slurrystorage/current/separator.html
@@ -34,7 +34,7 @@
                       }
                   },
                   hint: {
-                    text: "Slurry separators use a mechanical process to divide slurry into a liquid and solid fraction. These fractions can be kept in separate stores and applied at different times to your land. "
+                    text: "Slurry separators use a mechanical process to divide slurry into a liquid and stackable material. These fractions can be kept in separate stores and applied at different times to your land. "
                 },
 
                   items: [
