--- a/app/views/slurrystorage/current/standardised-grant-amounts.html
+++ b/app/views/slurrystorage/current/standardised-grant-amounts.html
@@ -25,11 +25,7 @@ Standardised costs
 
          <div class="govuk-form-group">
         <h2 class="govuk-heading-l">Grant amounts for eligible items</h2>
-        <p class="govuk-body">The Slurry Infrastructure Grant uses standardised grant amounts for the eligible items. </p>
-
-
-
-
+        <p class="govuk-body">The Slurry Infrastructure Grant uses referenced grant amounts for the eligible items. </p>
 
         {{ govukTable({
           caption: "Storage",
@@ -150,7 +146,7 @@ Standardised costs
           rows: [
           [
             {
-            html: "Screen press"
+            html: "Roller screen press"
             },
             {
             html: "£5,000 per unit"
