--- a/app/views/slurrystorage/current/start.html
+++ b/app/views/slurrystorage/current/start.html
@@ -54,7 +54,7 @@
             <li>slurry separator equipment</li>
             <li>additional items such as agitators, pumps or pipework</li>
           </ul>
-            <p class="govuk-body">Standardised grant amounts are used to work out how much funding you may receive. The minimum grant you can claim is £25,000. The maximum grant is £250,000.</p>
+            <p class="govuk-body">Referenced grant amounts are used to work out how much funding you may receive. The minimum grant you can claim is £25,000. The maximum grant is £250,000.</p>
         </div>
 
       <div class="govuk-inset-text">
