--- a/app/views/slurrystorage/current/planned-size-storage-fail.html
+++ b/app/views/slurrystorage/current/planned-size-storage-fail.html
@@ -26,9 +26,9 @@
         You cannot apply for a grant from this scheme
       </h1>
       {% if (data['farmertype'] == "Pig") %}
-      <p class="govuk-body">This grant is to get your serviceable storage levels to 8 months.</p>
+      <p class="govuk-body">This grant is to get your storage levels to 8 months.</p>
       {% else %}
-      <p class="govuk-body">This grant is to get your serviceable storage levels to 6 months.</p>
+      <p class="govuk-body">This grant is to get your storage levels to 6 months.</p>
       {% endif %}
       <br>
       <p><a href="https://www.gov.uk/topic/farming-food-grants-payments/rural-grants-payments" class="govuk-link govuk-link--no-visited-state"> See other grants you may be eligible for.</a></p>
