--- a/app/views/slurrystorage/current/storage-capacity-increase-pig.html
+++ b/app/views/slurrystorage/current/storage-capacity-increase-pig.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-Current storage capacity
+Current storage capacity for Pig farmers
 {% endblock %}
 
 {% block beforeContent %}
@@ -28,12 +28,12 @@ Current storage capacity
 
   <div class="govuk-form-group">
   <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="current-capacity">
-    What estimated volume do you need <br>to have 8 months’ serviceable storage?
+    What estimated volume do you need <br>to have 8 months’ storage?
     </label>
   </h1>
   <div id="current-capacity-hint" class="govuk-hint">
     Use <a href="https://ahdb.org.uk/knowledge-library/slurry-wizard" class="govuk-link govuk-link--no-visited-state" rel="noreferrer noopener" target="_blank">
-      Slurry Wizard (opens in new tab)</a> to help you calculate the difference between your current serviceable storage and 8 months’ serviceable storage, based on current animal numbers<br><br>Enter volume in cubic metres
+      Slurry Wizard (opens in new tab)</a> to help you calculate the difference between your current storage and 8 months’ storage, based on current animal numbers<br><br>Enter volume in cubic metres
 
   </div>
   <div class="govuk-input__wrapper"><input class="govuk-input govuk-input--width-5" id="current-capacity2" name="current-capacity2" type="text" spellcheck="false" value="{{ data['current-capacity2'] }}">
@@ -43,7 +43,7 @@ Current storage capacity
 
 
         {{ govukWarningText({
-          html: "This grant is to get your serviceable storage levels to 8 months. You cannot apply for the grant if you already have 8 months' storage that is fit for purpose.",
+          html: "This grant is to get your storage levels to 8 months. You cannot apply for the grant if you already have 8 months' storage that is fit for purpose.",
           iconFallbackText: "Warning"
         }) }}
 
@@ -53,12 +53,12 @@ Current storage capacity
         {% else %}
         <div class="govuk-form-group">
         <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="current-capacity">
-          What estimated additional volume do you need to have 8 months’ serviceable storage?
+          What estimated additional volume do you need to have 8 months’ storage?
           </label>
         </h1>
         <div id="current-capacity-hint" class="govuk-hint">
           Use <a href="https://ahdb.org.uk/knowledge-library/slurry-wizard" class="govuk-link govuk-link--no-visited-state" rel="noreferrer noopener" target="_blank">
-            Slurry Wizard (opens in new tab)</a> to help you calculate the difference between your current serviceable storage and 8 months’ serviceable storage, based on current animal numbers<br><br>Enter volume in cubic metres
+            Slurry Wizard (opens in new tab)</a> to help you calculate the difference between your current storage and 8 months’ storage, based on current animal numbers<br><br>Enter volume in cubic metres
 
         </div>
         <div class="govuk-input__wrapper"><input class="govuk-input govuk-input--width-5" id="current-capacity2" name="current-capacity2" type="text" spellcheck="false" value="{{ data['current-capacity2'] }}">
@@ -67,7 +67,7 @@ Current storage capacity
       </div>
 
         {{ govukWarningText({
-          html: "This grant is to get your serviceable storage levels to 8 months. For example, if you have 6 months' serviceable storage, we will fund another 2 months.<br><br>You cannot apply for the grant if you already have 8 months' storage that is fit for purpose.",
+          html: "This grant is to get your storage levels to 8 months. For example, if you have 6 months' storage, we will fund another 2 months.<br><br>You cannot apply for the grant if you already have 8 months' storage that is fit for purpose.",
           iconFallbackText: "Warning"
         }) }}
 {% endif %}
