--- a/app/views/slurrystorage/current/storage-capacity-increase.html
+++ b/app/views/slurrystorage/current/storage-capacity-increase.html
@@ -28,11 +28,11 @@ Current storage capacity
 
   <div class="govuk-form-group">
   <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="current-capacity">
-    What estimated volume do you need <br>to have 6 months’ serviceable storage?
+    What estimated volume do you need <br>to have 6 months’ storage?
     </label>
   </h1>
   <div id="current-capacity-hint" class="govuk-hint">
-    Use <a href="https://ahdb.org.uk/knowledge-library/slurry-wizard" class="govuk-link govuk-link--no-visited-state" rel="noreferrer noopener" target="_blank">Slurry Wizard (opens in new tab)</a> to help you calculate the difference between your current serviceable storage and 6 months’ serviceable storage, based on current animal numbers<br><br>Enter volume in cubic metres
+    Use <a href="https://ahdb.org.uk/knowledge-library/slurry-wizard" class="govuk-link govuk-link--no-visited-state" rel="noreferrer noopener" target="_blank">Slurry Wizard (opens in new tab)</a> to help you calculate the difference between your current storage and 6 months’ storage, based on current animal numbers<br><br>Enter volume in cubic metres
 
   </div>
   <div class="govuk-input__wrapper"><input class="govuk-input govuk-input--width-5" id="current-capacity2" name="current-capacity2" type="text" spellcheck="false" value="{{ data['current-capacity2'] }}">
@@ -42,7 +42,7 @@ Current storage capacity
 
 
         {{ govukWarningText({
-          html: "This grant is to get your serviceable storage levels to 6 months. You cannot apply for the grant if you already have 6 months' storage that is fit for purpose.",
+          html: "This grant is to get your storage levels to 6 months. You cannot apply for the grant if you already have 6 months' storage that is fit for purpose.",
           iconFallbackText: "Warning"
         }) }}
 
@@ -52,11 +52,11 @@ Current storage capacity
         {% else %}
         <div class="govuk-form-group">
         <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="current-capacity">
-          What estimated additional volume do you need to have 6 months’ serviceable storage?
+          What estimated additional volume do you need to have 6 months’ storage?
           </label>
         </h1>
         <div id="current-capacity-hint" class="govuk-hint">
-          Use <a href="https://ahdb.org.uk/knowledge-library/slurry-wizard" class="govuk-link govuk-link--no-visited-state" rel="noreferrer noopener" target="_blank">Slurry Wizard (opens in new tab)</a> to help you calculate the difference between your current serviceable storage and 6 months’ serviceable storage, based on current animal numbers<br><br>Enter volume in cubic metres
+          Use <a href="https://ahdb.org.uk/knowledge-library/slurry-wizard" class="govuk-link govuk-link--no-visited-state" rel="noreferrer noopener" target="_blank">Slurry Wizard (opens in new tab)</a> to help you calculate the difference between your current storage and 6 months’ storage, based on current animal numbers<br><br>Enter volume in cubic metres
 
         </div>
         <div class="govuk-input__wrapper"><input class="govuk-input govuk-input--width-5" id="current-capacity2" name="current-capacity2" type="text" spellcheck="false" value="{{ data['current-capacity2'] }}">
@@ -65,7 +65,7 @@ Current storage capacity
       </div>
 
         {{ govukWarningText({
-          html: "This grant is to get your serviceable storage levels to 6 months. For example, if you have 4 months' serviceable storage, we will fund another 2 months. <br><br>You cannot apply for the grant if you already have 6 months' storage that is fit for purpose.",
+          html: "This grant is to get your storage levels to 6 months. For example, if you have 4 months' storage, we will fund another 2 months. <br><br>You cannot apply for the grant if you already have 6 months' storage that is fit for purpose.",
           iconFallbackText: "Warning"
         }) }}
 {% endif %}
