--- a/app/views/index.html
+++ b/app/views/index.html
@@ -30,18 +30,18 @@
     </tr>
   </thead>
   <tbody class="govuk-table__body">
-    
+
      <tr class="govuk-table__row">
       <td class="govuk-table__cell"><a href="robotics" class="govuk-lik govuk-link--no-visited-state">Productivity grant - Robotics and solar</a>
         </td>
       <td class="govuk-table__cell">Checker (R2 version 1, last updated on 27 September 2023)</td>
     </tr>
-    
+
     <tr class="govuk-table__row">
       <td class="govuk-table__cell"><a href="slurrystorage" class="govuk-lik govuk-link--no-visited-state">Slurry infrastructure grant</a>
         </td>
-      <td class="govuk-table__cell">Checker (R2 version 2.3, last updated on 26 September 2023)</td>
-    </tr>   
+      <td class="govuk-table__cell">Checker (Round 2: version 2.4 - Private beta, last updated on 6 October 2023)</td>
+    </tr>
 
     <tr class="govuk-table__row">
       <td class="govuk-table__cell"><a href="ahw" class="govuk-lik govuk-link--no-visited-state">
@@ -62,7 +62,7 @@
         </td>
       <td class="govuk-table__cell">Checker (v4, last updated on 30 March 2022)</td>
     </tr>
-    
+
     <tr class="govuk-table__row">
       <td class="govuk-table__cell"><a href="slurry" class="govuk-lik govuk-link--no-visited-state">Productivity grant - Slurry</a>
         </td>
