robotics UR changes

--- a/app/views/robotics/current/farming-type.html
+++ b/app/views/robotics/current/farming-type.html
@@ -47,7 +47,7 @@ What is your project about?
                 },
                 {
                   value: "Solar",
-                  text: "Solar PV system",
+                  text: "Solar technologies",
                   checked: checked("farming-type", "Solar")
                 }
               ]
