--- a/app/views/robotics/current/solar-cost.html
+++ b/app/views/robotics/current/solar-cost.html
@@ -35,7 +35,7 @@
         <div class="govuk-form-group">
           <h1 class="govuk-heading-l">What is the total estimated cost of the solar PV system?</h1>
           <div class="govuk-hint">
-            You can only apply for a grant of up to 25% of the estimated costs. The minimum grant you can apply for this project is £15,000 (25% of £60,000), The maximum grant is £100,000.
+            You can only apply for a grant of up to 25% of the estimated costs. The minimum grant you can apply for this project is £15,000 (25% of £60,000), The maximum grant is £100,000 (25% of £400,000).
             <br/><br/>
             Do not include VAT.
           </div>
