--- a/app/views/robotics/current/robotic-items.html
+++ b/app/views/robotics/current/robotic-items.html
@@ -90,6 +90,14 @@
                 </label>
               </div>
 
+
+              <div class="govuk-radios__item">
+                <input class="govuk-radios__input" id="robotic-equipment-1" name="robotic-equipment" type="radio" value="Slurry">
+                <label class="govuk-label govuk-radios__label" for="robotic-equipment">
+                  Slurry and manure management
+                </label>
+              </div>
+
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="robotic-equipment-1" name="robotic-equipment" type="radio" value="Other robotic technology">
                 <label class="govuk-label govuk-radios__label" for="robotic-equipment">
