--- a/app/views/robotics/current/solar-existing-system.html
+++ b/app/views/robotics/current/solar-existing-system.html
@@ -26,7 +26,7 @@
 
 
     <div class="govuk-grid-column-two-thirds">
-      <form id="mainForm" class="form" action="solar-energy" method="post">
+      <form id="mainForm" class="form" action="solar-technology" method="post">
 
       <div class="govuk-form-group">
         <fieldset class="govuk-fieldset">
