--- a/app/views/robotics/current/solar-installation.html
+++ b/app/views/robotics/current/solar-installation.html
@@ -26,7 +26,7 @@
 
 
     <div class="govuk-grid-column-two-thirds">
-      <form id="mainForm" class="form" action="solar-technology" method="post">
+      <form id="mainForm" class="form" action="solar-cost" method="post">
 
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset" aria-describedby="waste-hint">
