--- a/app/views/robotics/current/solar-technology.html
+++ b/app/views/robotics/current/solar-technology.html
@@ -26,7 +26,7 @@
 
 
     <div class="govuk-grid-column-two-thirds">
-      <form id="mainForm" class="form" action="solar-cost" method="post">
+      <form id="mainForm" class="form" action="solar-technology-answer" method="post">
 
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset" aria-describedby="waste-hint">
@@ -35,6 +35,11 @@
                 What solar technologies does your project need?
               </h1>
             </legend>
+            <p class="govuk-hint">You can apply for grant funding to:</p>
+            <ul class="govuk-list govuk-list--bullet govuk-hint">
+              <li>buy a new solar PV system</li>
+              <li>add technology to an existing solar PV system on your farm</li>
+            </ul>
             <div id="waste-hint" class="govuk-hint">
               Select all that apply
             </div>
@@ -67,6 +72,12 @@
                 <input class="govuk-checkboxes__input" id="solar-technology-3" name="solar-technology" type="checkbox" value="battery">
                 <label class="govuk-label govuk-checkboxes__label" for="solar-technology-3">
                   A battery
+                </label>
+              </div>
+              <div class="govuk-checkboxes__item">
+                <input class="govuk-checkboxes__input" id="solar-technology-4" name="solar-technology" type="checkbox" value="diverter">
+                <label class="govuk-label govuk-checkboxes__label" for="solar-technology-4">
+                  Limit-loading power diverter to heat to cold store
                 </label>
               </div>
             </div>
