content changes to robotics and solar

--- a/app/views/robotics/current/solar-technology.html
+++ b/app/views/robotics/current/solar-technology.html
@@ -77,7 +77,7 @@
               <div class="govuk-checkboxes__item">
                 <input class="govuk-checkboxes__input" id="solar-technology-4" name="solar-technology" type="checkbox" value="diverter">
                 <label class="govuk-label govuk-checkboxes__label" for="solar-technology-4">
-                  Limit-loading power diverter to heat to cold store
+                  Limit-loading power diverter to heat or cold store
                 </label>
               </div>
             </div>
