--- a/app/views/robotics/current/project-cost-fail.html
+++ b/app/views/robotics/current/project-cost-fail.html
@@ -30,7 +30,7 @@
     </div>
 
 {{ govukInsetText({
-    text: 'The minimum grant you can apply for is £25,000 (40% of £62,500). The maximum grant is £500,000 (40% of £1,250,000).'
+    text: 'The minimum grant you can apply for is £25,000 (40% of £62,500). The maximum grant is £500,000 (40% of £1.25 million).'
 }) }}
 
 <p><a href="https://www.gov.uk/topic/farming-food-grants-payments/rural-grants-payments"  class="govuk-!-font-size-19"> See other grants you may be eligible for.</a><p>
