--- a/app/views/robotics/current/project-cost.html
+++ b/app/views/robotics/current/project-cost.html
@@ -33,7 +33,7 @@
         <div class="govuk-form-group">
           <h1 class="govuk-heading-l">What is the total estimated cost of the items?</h1>
           <div class="govuk-hint">
-            You can only apply for a grant of up to 40% of the estimated costs. The minimum grant you can apply for this project is £25,000 (40% of £62,500). The maximum grant is £500,000 (40% of £1,250,000).<br/><br/>
+            You can only apply for a grant of up to 40% of the estimated costs. The minimum grant you can apply for this project is £25,000 (40% of £62,500). The maximum grant is £500,000 (40% of £1.25 million).<br/><br/>
             Do not include VAT.
           </div>
 
