--- a/app/views/robotics/current/project-items-summary.html
+++ b/app/views/robotics/current/project-items-summary.html
@@ -51,7 +51,7 @@
                     <li>Continuous loop</li>
                   </ul>
                 </td>
-                <td class="govuk-table__cell"><a href="#">Change</td>
+                <td class="govuk-table__cell"><a href="#">Remove</td>
               </tr>
 
 
@@ -65,7 +65,7 @@
                       <li>Continuous loop</li>
                     </ul>
                   </td>
-                  <td class="govuk-table__cell"><a href="#">Change</td>
+                  <td class="govuk-table__cell"><a href="#">Remove</td>
                   </tr>
       
     
@@ -84,10 +84,9 @@
         <h2 class="app-step-nav-related__heading">
           <span class="app-step-nav-related__pretitle">Eligibility</span>
           </h2>
-          <p>Your technology must pass at least two criteria to get funding from this grant.</p>
+          <p>Automatic items must meet at least 2 criteria to be eligible for funding.</p>
 
-          <p>Items that pass two or three of the criteria are eligible automatic items.
-            Items that pass four criteria are eligible robotics items.</p>
+          <p>Robotic items must meet all 4 criteria to be eligible for funding.</p>
 
       </div>
     </div>
