--- a/app/views/robotics/current/robotic-items.html
+++ b/app/views/robotics/current/robotic-items.html
@@ -29,7 +29,7 @@
           <fieldset class="govuk-fieldset" aria-describedby="robotics-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                What robotic or automatic technology does your project need?
+                What technology does your project need?
               </h1>
             </legend>
 
