--- a/app/views/robotics/current/agricultural-sector.html
+++ b/app/views/robotics/current/agricultural-sector.html
@@ -14,7 +14,7 @@ Agricultural sector
       html: 'This is not a full service. It is not production code and you might experience problems  .'
   }) }}
 
-<a class="govuk-back-link" href="{{ backUrl }}">Back</a>
+  <a class="govuk-back-link" href="javascript:window.history.back()">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -62,14 +62,29 @@ Agricultural sector
             </div>
             </fieldset>
           </div>
+          
           <button class="govuk-button govuk-!-margin-right-1 govuk-!-margin-top-6" data-module="govuk-button">
+
+            {% if (data['farming-type'] == "Solar") %}
+            
+            Get your score
+
+            {% else %}
+
             Continue
+
+            {% endif %}                      
+
           </button>
+
+          
           {% if data['COMPLETED'] == true %}
             <button onclick="document.getElementById('mainForm').action='{{ completedUrl }}'"
               class="govuk-button govuk-button--secondary govuk-!-margin-right-1 govuk-!-margin-top-6" data-module="govuk-button">Back to score
             </button>
           {% endif %}
+          
+          
 
 
           </form>
