--- a/app/views/robotics/current/remaining-costs-fail.html
+++ b/app/views/robotics/current/remaining-costs-fail.html
@@ -27,9 +27,15 @@
 
       <p>You cannot use public money (for example, grant funding from government or local authorities) towards the project costs.</p>
 
-{{ govukInsetText({
-    text: 'You can use loans, overdrafts and certain other grants, such as the Basic Payment Scheme or agri-environment schemes such as the Countryside Stewardship Scheme.'
-}) }}
+      <div class="govuk-inset-text">
+        <p>You can use:</p>
+        <ul class="govuk-list govuk-list--bullet">
+          <li>loans</li>
+          <li>overdrafts</li>
+          <li>Basic Payment Scheme</li>
+
+        </ul>
+      </div>
 
       <a href="https://www.gov.uk/topic/farming-food-grants-payments/rural-grants-payments"  class="govuk-!-font-size-19">
          See other grants you may be eligible for.
