--- a/app/views/robotics/current/solar-installation.html
+++ b/app/views/robotics/current/solar-installation.html
@@ -26,7 +26,7 @@
 
 
     <div class="govuk-grid-column-two-thirds">
-      <form id="mainForm" class="form" action="solar-cost" method="post">
+      <form id="mainForm" class="form" action="solar-installation-answer" method="post">
 
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset" aria-describedby="waste-hint">
@@ -53,6 +53,13 @@
                 <input class="govuk-checkboxes__input" id="solar-installation-3" name="solar-installation" type="checkbox" value="floating">
                 <label class="govuk-label govuk-checkboxes__label" for="solar-installation-3">
                   Floating (on a reservoir)
+                </label>
+              </div>
+              <div class="govuk-checkboxes__divider">or</div>
+              <div class="govuk-checkboxes__item">
+                <input class="govuk-checkboxes__input" id="solar-installation-4" name="solar-installation" type="checkbox" value="none" data-behaviour="exclusive">
+                <label class="govuk-label govuk-checkboxes__label" for="solar-installation-4">
+                  None of the above
                 </label>
               </div>
             </div>
