--- a/app/views/robotics/current/solar-system-size.html
+++ b/app/views/robotics/current/solar-system-size.html
@@ -26,7 +26,7 @@
 
 
     <div class="govuk-grid-column-two-thirds">
-      <form id="mainForm" class="form" action="answers" method="post">
+      <form id="mainForm" class="form" action="agricultural-sector" method="post">
 
       <div class="govuk-form-group">
         <fieldset class="govuk-fieldset">
@@ -60,7 +60,7 @@
         </fieldset>
       </div>
 
-      <button class="govuk-button" data-module="govuk-button">Get your score</button>
+      <button class="govuk-button" data-module="govuk-button">Continue</button>
 
       </form>
     </div>
