--- a/app/views/slurrystorage/current/planned-size-storage.html
+++ b/app/views/slurrystorage/current/planned-size-storage.html
@@ -116,7 +116,10 @@ Planned size storage
             Any capacity above 6 months is not covered by the grant.<br><br>
             You must maintain at least 6 months’ capacity for the duration of the 5-year grant funding agreement.</p>
         {% endif %}
-
+        {{ govukDetails({
+          summaryText: "What if I am using a slurry separator?",
+          text: "If you are using a slurry separator, select the capacity your slurry store will hold after the stackable material has been removed."
+        }) }}
       </div>
    </div>
 
