--- a/app/views/slurrystorage/index.html
+++ b/app/views/slurrystorage/index.html
@@ -38,14 +38,20 @@
         <h2 class="govuk-heading-l">Design history</h2>
 
         <p class='govuk-list app-list--definition'>
-          <a href='slurrystorage/current/start' class="govuk-link--no-visited-state"><strong>Round 2: version 2.4 - Private beta (current)</a></strong><br>
-          Second round of iterations (Issues 26 to 60). Changes implemented post-user testing and UAT <a href='https://eaflood.atlassian.net/wiki/spaces/GRA/pages/4445274372/Change+Log+1+Design+and+Content+Changes+SIG+2' target="new" class="govuk-link--no-visited-state">includes prototype tickets from Jira</a>.<br>
-            <span class="govuk-body govuk-!-font-size-14"># Last updated on 19 October 2023<br/>
+          <a href='slurrystorage/current/start' class="govuk-link--no-visited-state"><strong>Round 2: version 2.4 - Private beta (current)</a></strong>
+          <br><span class="govuk-body govuk-!-font-size-14"># Last updated on 19 October 2023<br/>
             </span></p>
+        <ul class="govuk-list govuk-list--bullet ">
+          <li><strong>16 Sep 2023</strong>: Second round of iterations <a href='https://eaflood.atlassian.net/wiki/spaces/GRA/pages/4445274372/Change+Log+1+Design+and+Content+Changes+SIG+2' target="new" class="govuk-link--no-visited-state">(Issues 26 to 40)</a>.</li>
+          <li><strong>19 October 2023</strong>: Changes implemented after UAT <a href='https://eaflood.atlassian.net/wiki/spaces/GRA/pages/4445274372/Change+Log+1+Design+and+Content+Changes+SIG+2' target="new" class="govuk-link--no-visited-state">(Issues 41 to 61)</a>.</li>
+        </ul>
+
+
+
         <p class='govuk-list app-list--definition'>
           <a href='slurrystorage/r2v21/start' class="govuk-link--no-visited-state"><strong>Round 2: version 2.1</a></strong><br>
           Second round of iterations (Issues 21 to 25). Changes implemented post-user testing <a href='https://eaflood.atlassian.net/wiki/spaces/GRA/pages/4445274372/Change+Log+1+Design+and+Content+Changes+SIG+2' target="new" class="govuk-link--no-visited-state">includes prototype tickets from Jira</a>.<br>
-            <span class="govuk-body govuk-!-font-size-14"># Last updated on 4 September 2023<br/>
+           <span class="govuk-body govuk-!-font-size-14"># Last updated on 4 September 2023
             </span></p>
 
         <p class='govuk-list app-list--definition'>
